Fix multicast filtering.

Submitted by:	Takanori Sawada
PR:		arm/187179

Former-commit-id: d78e45b75c603aac8050e1338a79d3a7b5259822